# sentimental

ml/: .gitignore  pyproject.toml
ml/data_loading/: dataset.py
ml/models/: text.py  video.py
