[project]
name = "sentimental-model"
version = "0.1.0"
description = "ml model for sentimental analysis for sentimental"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.0",
]
